build_log_debug.txt
C:\Users\donald\AppData\Local\zig\p\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\build.zig:12:108: error: use of undeclared identifier 'Options'
fn getRaylib(b: *std.Build, target: std.Build.ResolvedTarget, optimize: std.builtin.OptimizeMode, options: Options) *std.Build.Step.Compile {
                                                                                                           ^~~~~~~
C:\Users\donald\AppData\Local\zig\p\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\build.zig:55:24: error: use of undeclared identifier 'this'
        const raylib = this.getModule(b, target, optimize);
                       ^~~~
C:\Users\donald\AppData\Local\zig\p\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\build.zig:69:29: error: use of undeclared identifier 'this'
    const raylib_artifact = this.getRaylib(b, target, optimize, Options.getOptions(b));
                            ^~~~
